// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<h2>
  Hvor bor du?
</h2>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fylke
  </label>
  <select id="<removed>">
    <option value>
      Velg et fylke …
    </option>
    <option value="Agder">
      Agder
    </option>
    <option value="Akershus">
      Akershus
    </option>
    <option value="Buskerud">
      Buskerud
    </option>
    <option value="Finnmark">
      Finnmark
    </option>
    <option value="Innlandet">
      Innlandet
    </option>
    <option value="Møre og Romsdal">
      Møre og Romsdal
    </option>
    <option value="Nordland">
      Nordland
    </option>
    <option value="Oslo">
      Oslo
    </option>
    <option value="Rogaland">
      Rogaland
    </option>
    <option value="Telemark">
      Telemark
    </option>
    <option value="Troms">
      Troms
    </option>
    <option value="Trøndelag">
      Trøndelag
    </option>
    <option value="Vestfold">
      Vestfold
    </option>
    <option value="Vestland">
      Vestland
    </option>
    <option value="Østfold">
      Østfold
    </option>
  </select>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    By
  </label>
  <select id="<removed>">
    <option value>
      Velg en by …
    </option>
  </select>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fylke
  </label>
  <select
    disabled
    id="<removed>"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="møre og romsdal">
      Møre og Romsdal
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="oslo">
      Oslo
    </option>
    <option value="rogaland">
      Rogaland
    </option>
    <option value="telemark">
      Telemark
    </option>
    <option value="troms">
      Troms
    </option>
    <option value="trøndelag">
      Trøndelag
    </option>
    <option value="vestfold">
      Vestfold
    </option>
    <option value="vestland">
      Vestland
    </option>
    <option value="østfold">
      Østfold
    </option>
  </select>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fylke
  </label>
  <select
    aria-readonly="false"
    data-width="full"
    aria-invalid="false"
    id="<removed>"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="møre og romsdal">
      Møre og Romsdal
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="oslo">
      Oslo
    </option>
    <option value="rogaland">
      Rogaland
    </option>
    <option value="telemark">
      Telemark
    </option>
    <option value="troms">
      Troms
    </option>
    <option value="trøndelag">
      Trøndelag
    </option>
    <option value="vestfold">
      Vestfold
    </option>
    <option value="vestland">
      Vestland
    </option>
    <option value="østfold">
      Østfold
    </option>
  </select>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fylke
  </label>
  <select
    aria-readonly="true"
    id="<removed>"
  >
    <option
      value
      selected
    >
      Velg et fylke …
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="møre og romsdal">
      Møre og Romsdal
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="oslo">
      Oslo
    </option>
    <option value="rogaland">
      Rogaland
    </option>
    <option value="telemark">
      Telemark
    </option>
    <option value="troms">
      Troms
    </option>
    <option value="trøndelag">
      Trøndelag
    </option>
    <option value="vestfold">
      Vestfold
    </option>
    <option value="vestland">
      Vestland
    </option>
    <option value="østfold">
      Østfold
    </option>
  </select>
</ds-field>
`;

exports[`With Error 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fylke
  </label>
  <select
    aria-invalid="true"
    id="<removed>"
    aria-describedby="<removed>"
  >
    <option value>
      Velg et fylke …
    </option>
    <option value="agder">
      Agder
    </option>
    <option value="akershus">
      Akershus
    </option>
    <option value="buskerud">
      Buskerud
    </option>
    <option value="finnmark">
      Finnmark
    </option>
    <option value="innlandet">
      Innlandet
    </option>
    <option value="møre og romsdal">
      Møre og Romsdal
    </option>
    <option value="nordland">
      Nordland
    </option>
    <option value="oslo">
      Oslo
    </option>
    <option value="rogaland">
      Rogaland
    </option>
    <option value="telemark">
      Telemark
    </option>
    <option value="troms">
      Troms
    </option>
    <option value="trøndelag">
      Trøndelag
    </option>
    <option value="vestfold">
      Vestfold
    </option>
    <option value="vestland">
      Vestland
    </option>
    <option value="østfold">
      Østfold
    </option>
  </select>
  <p
    data-field="validation"
    id="<removed>"
  >
    Velg et fylke
  </p>
</ds-field>
`;

exports[`With Optgroup 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Klassetrinn
  </label>
  <select id="<removed>">
    <option value>
      Velg klassetrinn …
    </option>
    <optgroup label="Barneskole">
      <option value="første">
        Første
      </option>
      <option value="andre">
        Andre
      </option>
      <option value="tredje">
        Tredje
      </option>
      <option value="fjerde">
        Fjerde
      </option>
      <option value="femte">
        Femte
      </option>
      <option value="sjette">
        Sjette
      </option>
      <option value="syvende">
        Syvende
      </option>
    </optgroup>
    <optgroup label="Ungdomsskole">
      <option value="åttende">
        Åttende
      </option>
      <option value="niende">
        Niende
      </option>
      <option value="tiende">
        Tiende
      </option>
    </optgroup>
    <optgroup label="Videregående">
      <option value="vg1">
        Vg1
      </option>
      <option value="vg2">
        Vg2
      </option>
      <option value="vg3">
        Vg3
      </option>
    </optgroup>
  </select>
</ds-field>
`;
